kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bombasticifccluster
  labels:
    name: bombasticifccluster
